# checkers

./: Cargo.toml  README.md  build.bat
data/: moves_with_captures.bin.snappy  moves_without_captures.bin.snappy
docs/: checkers_cpu.wasm  index.html
src/: ai.rs  ai_v2.rs  app.rs  bot.rs  constants.rs  dumb_ai.rs  game.rs  main.rs  useful_functions.rs  visualizer.rs
src/app/: all_params.rs  game_scene.rs  menu_scene.rs
src/app/all_params/: evaluation_bar.rs  game_hint.rs  game_params.rs  game_timer.rs  menu_params.rs  scene.rs  ui_params.rs  ui_style.rs
src/app/all_params/game_params/: player.rs  position_params.rs
src/app/all_params/menu_params/: player_settings.rs
src/app/all_params/menu_params/player_settings/: player_creator.rs
src/bot/: nega_scout_bot.rs
src/game/: magic_numbers.rs
