[package]
name = "checkers_cpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-macroquad = "0.15.0"
rustc-hash = "1.1.0"
fastrand = "2.0.0"
lazy_static = "1.4.0"
tokio = { version = "1.32.0", features = ["sync"] }
async-recursion = "1.0.4"
genawaiter = "0.99.1"
